<resources>
    <string name="app_name">HomeMirror</string>

    <string name="default_mirror_mirror">Mirror, mirror on the wall. Hannah is the prettiest of them all.</string>

    <!-- Time module -->
    <string name="good_morning">Good morning, %s</string>
    <string name="good_afternoon">Good afternoon, %s</string>
    <string name="good_evening">Good evening, %s</string>
    <string name="late">You\'re up late, %s</string>
    <string name="bedtime">Good evening, %s\n\nIt\'s Hannah\'s bedtime.</string>

    <!-- Set up -->
    <string name="location">Location</string>
    <string name="set_up">Set Up</string>
    <string name="launch">Launch</string>
    <string name="show_xkcd">Show new xkcd</string>
    <string name="invert_colors">Invert comic colors</string>
    <string name="show_calendar_event">Show next calendar event</string>
    <string name="how_to_stop">To get back to Set Up and stop mirror updates, swipe up from bottom of launched mirror, and press Back.</string>

</resources>
