<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        tools:context=".ConfigurationActivity">

        <TextView
            style="@style/MirrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_up" />

        <CheckBox
            android:id="@+id/calendar_checkbox"
            style="@style/ConfigurationItemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/show_calendar_event" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/item_margin"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/xkcd_checkbox"
                style="@style/ConfigurationItemText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/item_margin"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/show_xkcd" />

            <CheckBox
                android:id="@+id/xkcd_invert_checkbox"
                style="@style/ConfigurationItemText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/invert_colors" />
        </LinearLayout>

        <Button
            android:id="@+id/launch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/item_margin"
            android:text="@string/launch"
            android:textSize="@dimen/configuration_text_size" />

        <TextView
            style="@style/ConfigurationDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin"
            android:text="@string/how_to_stop" />
    </LinearLayout>
</ScrollView>
